creation de la gallerie

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         .text-justify{
             text-align: justify;
         }
-        #carouselExampleCaptions img{
+        #carouselExampleCaptions img, .card{
             aspect-ratio: 16/9;
 
         }
@@ -98,6 +98,69 @@
         <!-- galery section -->
         <section id="galery"class="container-fluid">
             <h2> Galery</h2>
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card mb-3">
+                        <img src="/Assets/img/book-863418_1280.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card mb-3 ">
+                        <img src="/Assets/img/book-863418_1280.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card mb-3">
+                        <img src="/Assets/img/book-863418_1280.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card mb-3">
+                        <img src="/Assets/img/book-863418_1280.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card mb-3">
+                        <img src="/Assets/img/book-863418_1280.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card mb-3">
+                        <img src="/Assets/img/book-863418_1280.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
+                </div>
+                
+            </div>
             <p class="text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis qui voluptas illo doloremque sapiente iusto a omnis alias reiciendis, aperiam, eos inventore? Molestiae impedit, voluptatem deleniti repellendus dolores ipsa odio neque! Odit, perferendis voluptatem dolor nulla, doloremque vero, repudiandae doloribus nisi excepturi obcaecati nostrum ullam ea impedit! Mollitia fugit placeat quam sunt saepe ab vero repellat sapiente laboriosam amet veniam voluptatibus ullam quos, voluptate officia ipsum corrupti dolor! Repellat, earum debitis ducimus fugiat fugit voluptatibus at minima, consequuntur dolores cupiditate similique? Beatae fugit harum, esse, adipisci deserunt suscipit itaque maxime consequatur autem natus necessitatibus error. Voluptate iure temporibus amet unde veniam consequatur! Harum ea impedit inventore excepturi temporibus ipsum doloremque, quaerat tempora labore nostrum, molestias quisquam voluptatibus ab! Earum omnis perferendis, dignissimos ipsum obcaecati saepe, excepturi dolore distinctio voluptatem, optio maxime libero! Deserunt qui quam nesciunt reiciendis ex laudantium dolorem voluptatum? Nihil accusantium pariatur eius! Incidunt sunt cumque fugit quam!</p>
         </section>
         <!-- contact section  -->
