rajouter un map sur la section contact

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
             aspect-ratio: 16/9;
 
         }
+        #carouselExampleCaptions {
+            max-height:100vh;
+            margin: auto;
+        }
+        .navbar-brand img {
+            width: 70px;
+        }
     </style>
 </head>
 <body>
@@ -22,7 +29,7 @@
         <!-- nav -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand" href="#"><img src="/Assets/img/3151554_big bang theory_icon.png" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -166,6 +173,7 @@
         <!-- contact section  -->
         <section id="contact" class="container-fluid">
             <h2> contact</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2790.1667633787415!2d5.162791876757755!3d45.62738612253518!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4d2998d7a016d%3A0x9ed2a43b1fd9e2ba!2sCCI%20NORD%20ISERE!5e0!3m2!1sfr!2sfr!4v1701262695177!5m2!1sfr!2sfr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <p class="text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis qui voluptas illo doloremque sapiente iusto a omnis alias reiciendis, aperiam, eos inventore? Molestiae impedit, voluptatem deleniti repellendus dolores ipsa odio neque! Odit, perferendis voluptatem dolor nulla, doloremque vero, repudiandae doloribus nisi excepturi obcaecati nostrum ullam ea impedit! Mollitia fugit placeat quam sunt saepe ab vero repellat sapiente laboriosam amet veniam voluptatibus ullam quos, voluptate officia ipsum corrupti dolor! Repellat, earum debitis ducimus fugiat fugit voluptatibus at minima, consequuntur dolores cupiditate similique? Beatae fugit harum, esse, adipisci deserunt suscipit itaque maxime consequatur autem natus necessitatibus error. Voluptate iure temporibus amet unde veniam consequatur! Harum ea impedit inventore excepturi temporibus ipsum doloremque, quaerat tempora labore nostrum, molestias quisquam voluptatibus ab! Earum omnis perferendis, dignissimos ipsum obcaecati saepe, excepturi dolore distinctio voluptatem, optio maxime libero! Deserunt qui quam nesciunt reiciendis ex laudantium dolorem voluptatum? Nihil accusantium pariatur eius! Incidunt sunt cumque fugit quam!</p>
         </section>
     </main>
