--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- nav -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img src="./Assets/img/3151554_big bang theory_icon.png" alt=""></a>
+              <a class="navbar-brand" href="#"><img src="Assets/img/3151554_big bang theory_icon.png" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -61,21 +61,21 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./Assets/img/book-863418_1280.jpg" class="d-block w-100" alt="...">
+                <img src="Assets/img/book-863418_1280.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>First slide label</h5>
                   <p>Some representative placeholder content for the first slide.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./Assets/img/landscape-4572804_1280.jpg" class="d-block w-100" alt="...">
+                <img src="Assets/img/landscape-4572804_1280.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Second slide label</h5>
                   <p>Some representative placeholder content for the second slide.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./Assets/img/station-5011733_1280.png" class="d-block w-100" alt="...">
+                <img src="Assets/img/station-5011733_1280.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Third slide label</h5>
                   <p>Some representative placeholder content for the third slide.</p>
@@ -104,7 +104,7 @@
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card mb-3">
-                        <img src="./Assets/img/book-863418_1280.jpg" class="card-img-top" alt="...">
+                        <img src="Assets/img/book-863418_1280.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -114,7 +114,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card mb-3 ">
-                        <img src="./Assets/img/book-863418_1280.jpg" class="card-img-top" alt="...">
+                        <img src="Assets/img/book-863418_1280.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -124,7 +124,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card mb-3">
-                        <img src="./Assets/img/book-863418_1280.jpg" class="card-img-top" alt="...">
+                        <img src="Assets/img/book-863418_1280.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -134,7 +134,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card mb-3">
-                        <img src="./Assets/img/book-863418_1280.jpg" class="card-img-top" alt="...">
+                        <img src="Assets/img/book-863418_1280.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -144,7 +144,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card mb-3">
-                        <img src="./Assets/img/book-863418_1280.jpg" class="card-img-top" alt="...">
+                        <img src="Assets/img/book-863418_1280.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -154,7 +154,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card mb-3">
-                        <img src="./Assets/img/book-863418_1280.jpg" class="card-img-top" alt="...">
+                        <img src="Assets/img/book-863418_1280.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
