--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <!-- footer -->
     <footer class="bg-primary text-white">
         <div class="p-3 text-center">
-            <h3>&copy; DWWM CCI VILLEFONTAINE </h3>
+            <h3>&copy; DWWM CCI VILLEFONTAINE NNe  </h3>
             <a href="#" class="btn btn-dark">top</a>
         </div>
     </footer>
